[package]
name = "project"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.0", features = ["full"] }
steganography = "1.0.2"
aes = "0.7.5"
block-modes = "0.8.1"
hex = "0.4"
image = "*"
num = "*"
rand = "*"
